test/bad/generators/generic04.px

func f<T>(): T... def
    skip

f()
